Turn on mod_authz_svn for tests over DAV.  We have several tests that exercise our authz functionality, but up to now they have only been run over ra_svn, since our ra_dav tests have not been configured to use mod_authz_svn.  Since our test suite does not provide us with the ability to change httpd.conf for a single test, that means we need to turn it on for all tests, with a default authz file that just gives anyone full read write access to the repository, just like they had without mod_authz_svn.
Note: Anyone who's been running the DAV tests without using davautocheck
      will have to tweak their httpd.conf to make things work again.

* subversion/tests/cmdline/svnsync_tests.py
  (basic_authz): Pass a name to sbox.build(), and move the writing of
   the authz conf file later in the test so it doesn't get overwritten.
  (copy_from_unreadable_dir): Ditto, but also make the authz file
   conditional on the type of ra layer we're using.

* subversion/tests/cmdline/README: Mention the AUthzSVNAccessFile
  config needed for the authz tests.

* subversion/tests/cmdline/authz_tests.py
  Alias XFail.
  (skip_test_when_no_authz_available): Let http tests use authz again.
  (is_this_dav): New helper function.
  (test_list): Mark authz_open_directory as XFail on DAV, since it seems
   to have some problems there.

* subversion/tests/cmdline/svntest/testcase.py
  (XFail.__init__): Add a cond parameter, don't set up _result_text here,
   stash cond for later.
  (XFail.convert_result): Set up the _result_text here, and mention why.
   Also reverse the order of the pass and fail strings, due to the fact
   that we're changing the order of the call to this function.

* subversion/tests/cmdline/svntest/main.py
  (Sandbox._set_name): Set authz_file conditionally based on ra layer.
  (Sandbox.build): Allow the user to pass in an explicit name.
  (TestRunner.run): Reverse the order fo calls to convert_result and
   run_text, to allow the XFail class to reset _result_text.

* tools/

--- a/subversion/tests/cmdline/README
+++ b/subversion/tests/cmdline/README
@@ -62,6 +62,7 @@ paths adjusted appropriately:
    <Location /svn-test-work/repositories>
      DAV svn
      SVNParentPath /home/yourusernamehere/projects/svn/subversion/tests/cmdline/svn-test-work/repositories
+     AuthzSVNAccessFile /home/yourusernamehere/projects/svn/subversion/tests/cmdline/svn-test-work/authz
      AuthType Basic
      AuthName "Subversion Repository"
      AuthUserFile /usr/local/apache2/conf/users
@@ -71,6 +72,7 @@ paths adjusted appropriately:
    <Location /svn-test-work/local_tmp/repos>
      DAV svn
      SVNPath /home/yourusernamehere/projects/svn/subversion/tests/cmdline/svn-test-work/local_tmp/repos
+     AuthzSVNAccessFile /home/yourusernamehere/projects/svn/subversion/tests/cmdline/svn-test-work/authz
      AuthType Basic
      AuthName "Subversion Repository"
      AuthUserFile /usr/local/apache2/conf/users
