--- a/subversion/po/zh_TW.po
+++ b/subversion/po/zh_TW.po
@@ -399,7 +399,7 @@ msgstr "未提供鎖定符記"
 
 #: include/svn_error_codes.h:561
 msgid "Username does not match lock owner"
-msgstr "使用者名稱不符合鎖定擁有人"
+msgstr "使用者名稱不符合鎖定擁有者"
 
 #: include/svn_error_codes.h:566
 msgid "Filesystem has no such lock"
@@ -1204,9 +1204,10 @@ msgstr "目前只支援路徑的文件參考基礎與其工作檔案之間的檔
 msgid "Directory '%s' has no URL"
 msgstr "目錄 '%s' 沒有 URL"
 
+# as-is
 #: libsvn_client/diff.c:2321
 msgid "Summarizing diff can only compare repository to repository"
-msgstr ""
+msgstr "Summarizing diff can only compare repository to repository"
 
 #: libsvn_client/diff.c:2678 libsvn_client/diff.c:2684
 #: libsvn_client/diff.c:2818 libsvn_client/locking_commands.c:263
@@ -5552,6 +5553,8 @@ msgid ""
 "the change made by revision ARG (like -r ARG-1:ARG)\n"
 "                             If ARG is negative this is like -r ARG:ARG-1"
 msgstr ""
+"修訂版 ARG 所產生的更動 (就像 -r ARG-1:ARG)\n"
+"                             若 ARG 為負數, 則像 -r ARG:ARG-1"
 
 #: svn/main.c:74
 msgid ""
@@ -5719,7 +5722,7 @@ msgstr "無法對目錄解除鎖定"
 
 #: svn/main.c:159
 msgid "show a summary of the results"
-msgstr ""
+msgstr "顯示結果的摘要"
 
 #: svn/main.c:198
 msgid ""
@@ -6109,7 +6112,6 @@ msgstr ""
 "    svn log http://www.example.com/repo/project foo.c bar.c\n"
 
 #: svn/main.c:441
-#, fuzzy
 msgid ""
 "Apply the differences between two sources to a working copy path.\n"
 "usage: 1. merge sourceURL1[@N] sourceURL2[@M] [WCPATH]\n"
@@ -6149,8 +6151,9 @@ msgstr ""
 "\n"
 "  3. 第三種形式中, SOURCE 可為 URL 或工作複本項目, 後者會使用對應的\n"
 "     URL. 在修訂版 REV 的 URL 會以它存在於修訂版 N 與 M 的路徑來作\n"
-"     比較. 如果未指定 REV, 就會假設為 HEAD.  \"-c M\" 選項與 \n"
-"     \"-r N:M\" 相同, 其中 N = M-1.\n"
+"     比較. 如果未指定 REV, 就會假設為 HEAD.  '-c M' 選項等同於 \n"
+"     '-r N:M', 其中 N = M-1. 使用 '-c -M' 則為相反: '-r M:N',\n"
+"     其中 N = M-1.\n"
 "\n"
 "  WCPATH 是接受更動的工作複本路徑. 如果省略 WCPATH 的話, 預設值為\n"
 "  '.', 除非來源的主檔名符合 '.' 裡的某個檔案; 在這種情況下, 檔案\n"
@@ -6208,7 +6211,6 @@ msgstr ""
 "    URL -> URL:  完全是伺服器端的更名.\n"
 
 #: svn/main.c:500
-#, fuzzy
 msgid ""
 "Remove a property from files, dirs, or revisions.\n"
 "usage: 1. propdel PROPNAME [PATH...]\n"
@@ -6220,10 +6222,11 @@ msgid ""
 msgstr ""
 "移除目錄, 檔案, 或修訂版的性質.\n"
 "用法: 1. propdel PROPNAME [PATH...]\n"
-"      2. propdel PROPNAME --revprop -r REV [URL]\n"
+"      2. propdel PROPNAME --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 移除納入版本控制的工作複本性質.\n"
 "  2. 移除無版本控制的遠端檔案庫修訂版性質.\n"
+"     TARGET 只是用來決定存在哪個檔案庫\n"
 
 #: svn/main.c:512
 msgid ""
@@ -6244,7 +6247,6 @@ msgstr ""
 "     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 
 #: svn/main.c:525
-#, fuzzy
 msgid ""
 "Print the value of a property on files, dirs, or revisions.\n"
 "usage: 1. propget PROPNAME [TARGET[@REV]...]\n"
@@ -6264,11 +6266,12 @@ msgid ""
 msgstr ""
 "顯示目錄, 檔案, 或修訂版的性質內容.\n"
 "用法: 1. propget PROPNAME [TARGET[@REV]...]\n"
-"      2. propget PROPNAME --revprop -r REV [URL]\n"
+"      2. propget PROPNAME --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 顯示納入版本控制的性質. 如果指定 REV 的話, 它會用來決定目標的\n"
 "     哪一個版本會最先被檢閱.\n"
 "  2. 顯示無版本控制的遠端檔案庫修訂版性質.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 "\n"
 "  本子命令的預設行為會在性質內容加上額外的換列字元, 如此可得到較\n"
 "  美觀的輸出. 另外, 當同時處理多個路徑時, 每一個性質內容會加上它\n"
@@ -6276,7 +6279,6 @@ msgstr ""
 "  將二進制性質內容重導至一個檔案時就很有用).\n"
 
 #: svn/main.c:544
-#, fuzzy
 msgid ""
 "List all properties on files, dirs, or revisions.\n"
 "usage: 1. proplist [TARGET[@REV]...]\n"
@@ -6289,14 +6291,14 @@ msgid ""
 msgstr ""
 "列出所有目錄, 檔案, 或修訂版的性質.\n"
 "用法: 1. proplist [TARGET[@REV]...]\n"
-"      2. proplist --revprop -r REV [URL]\n"
+"      2. proplist --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 列出納入版本管理的性質. 如果指定 REV 的話, 它會用來決定目標的\n"
 "     哪一個版本會最先被檢閱.\n"
 "  2. 列出無版本控制的遠端檔案庫修訂版性質更動.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 
 #: svn/main.c:556
-#, fuzzy
 msgid ""
 "Set the value of a property on files, dirs, or revisions.\n"
 "usage: 1. propset PROPNAME PROPVAL PATH...\n"
@@ -6340,12 +6342,15 @@ msgid ""
 "  attempt will fail, and a recursive attempt will set the property\n"
 "  only on the file children of the directory.\n"
 msgstr ""
-"設定目錄, 檔案, 或修訂版的 PROPNAME 內容為 PROPVAL.\n"
-"用法: 1. propset PROPNAME [PROPVAL | -F VALFILE] PATH...\n"
-"      2. propset PROPNAME --revprop -r REV [PROPVAL | -F VALFILE] [URL]\n"
+"設定目錄, 檔案, 或修訂版的性質的內容.\n"
+"用法: 1. propset PROPNAME PROPVAL PATH...\n"
+"      2. propset PROPNAME --revprop -r REV PROPVAL [TARGET]\n"
 "\n"
 "  1. 在工作複本中建立一個版本控制的本地性質更動.\n"
 "  2. 對檔案庫修訂版建立一個無版本控制的遠端性質更動.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
+"\n"
+"  性質的內容可以不用 PROPVAL 而改以 --file 選項來提供.\n"
 "\n"
 "  注意: svn 認得以下受版本控制的特殊性質, 不過還是可以儲存任意的性質:\n"
 "    svn:ignore     - 以換列字元隔開的忽略檔案樣式列表.\n"
@@ -6634,7 +6639,7 @@ msgstr "捕捉到信號"
 
 #: svn/main.c:892
 msgid "Non-numeric limit argument given"
-msgstr ""
+msgstr "使用了非數字的限制引數"
 
 #: svn/main.c:912
 msgid ""
@@ -6644,11 +6649,11 @@ msgstr "遇到了多個修訂版引數; 不可指定兩個 -c, 或同時指定 -
 
 #: svn/main.c:920 svn/main.c:1112
 msgid "Can't specify -c with --old"
-msgstr ""
+msgstr "--old 無法與 -c 一同使用"
 
 #: svn/main.c:927
 msgid "Non-numeric change argument given to -c"
-msgstr ""
+msgstr "對 -c 使用了非數字的更動引數"
 
 #: svn/main.c:933
 msgid "There is no change 0"
@@ -7024,7 +7029,7 @@ msgstr "請改試 'svn revert --recursive'?"
 #: svn/status.c:261
 #, c-format
 msgid "'%s' has lock token, but no lock owner"
-msgstr ""
+msgstr "'%s' 的鎖定被拿走了, 但是沒有鎖定擁有者"
 
 #: svn/switch-cmd.c:58
 #, c-format
@@ -7105,7 +7110,7 @@ msgstr ""
 
 #: svn/util.c:592
 msgid "Cannot invoke editor to get log message when non-interactive"
-msgstr ""
+msgstr "非互動操作, 無法叫用文字編輯器來取得送交訊息"
 
 #: svn/util.c:605
 msgid ""
@@ -7221,6 +7226,8 @@ msgid ""
 "disallow use of SVNDIFF1 in on-disk storage,\n"
 "                             for backwards compatibility"
 msgstr ""
+"為了向後相容,\n"
+"                             不允許在磁碟儲存裡使用 SVNDIFF1"
 
 #: svnadmin/main.c:299
 msgid ""
@@ -7229,6 +7236,10 @@ msgid ""
 "Open the repository at REPOS_PATH, then abort, thus simulating\n"
 "a process that crashes while holding an open repository handle.\n"
 msgstr ""
+"用法: svnadmin crashtest REPOS_PATH\n"
+"\n"
+"開啟位於 REPOS_PATH 的檔案庫, 然後中止, 用以模擬\n"
+"行程在取得開啟的檔案庫代號後當掉的狀況.\n"
 
 #: svnadmin/main.c:305
 msgid ""
@@ -7620,7 +7631,7 @@ msgstr "無效的複製來源路徑 '%s'"
 #: svndumpfilter/main.c:558
 #, c-format
 msgid "No valid copyfrom revision in filtered stream"
-msgstr ""
+msgstr "在過濾串流中沒有有效的 copyfrom 修訂版號"
 
 #: svndumpfilter/main.c:663
 msgid "Delta property block detected - not supported by svndumpfilter"
@@ -7761,7 +7772,7 @@ msgstr "不顯示新增檔案的差異"
 
 #: svnlook/main.c:117
 msgid "print differences against the copy source"
-msgstr ""
+msgstr "顯示與複製來源的差異"
 
 #: svnlook/main.c:120
 msgid "operate on a revision property (use with -r or -t)"
@@ -8154,11 +8165,11 @@ msgstr "只聆聽一次 (適合除錯)"
 
 #: svnserve/main.c:162
 msgid "write server process ID to file arg"
-msgstr ""
+msgstr "將伺服器行程代號寫入檔案引數"
 
 #: svnserve/main.c:165
 msgid "run as a windows service (SCM only)"
-msgstr ""
+msgstr "以 Windows 服務的形式執行 (僅服務控制管理員)"
 
 #: svnserve/main.c:177
 #, c-format
@@ -8190,6 +8201,7 @@ msgid ""
 "svnserve: The --service flag is only valid if the process is started by the "
 "Service Control Manager.\n"
 msgstr ""
+"svnserve: --service 只有在行程以服務控制管理員起動時才有效.\n"
 
 #: svnserve/main.c:568
 #, c-format
@@ -8231,17 +8243,17 @@ msgstr "無法建立執行緒"
 #: svnserve/winservice.c:341
 #, c-format
 msgid "Failed to create winservice_start_event"
-msgstr ""
+msgstr "無法建立 winservice_start_event"
 
 #: svnserve/winservice.c:352
 #, c-format
 msgid "The service failed to start"
-msgstr ""
+msgstr "服務無法啟動"
 
 #: svnserve/winservice.c:400
 #, c-format
 msgid "Failed to connect to Service Control Manager"
-msgstr ""
+msgstr "無法連上服務控制管理員"
 
 #: svnserve/winservice.c:411
 #, c-format
@@ -8249,18 +8261,23 @@ msgid ""
 "The service failed to start; an internal error occurred while starting the "
 "service"
 msgstr ""
+"服務無法啟動; 啟動時發生內部錯誤"
 
 #: svnsync/main.c:65
 msgid ""
 "usage: svnsync initialize DEST_URL --source-url SOURCE_URL\n"
 "Initialize a destination repository.\n"
 msgstr ""
+"用法: svnsync initialize DEST_URL --source-url SOURCE_URL\n"
+"初始化一個目標檔案庫.\n"
 
 #: svnsync/main.c:70
 msgid ""
 "usage: svnsync synchronize DEST_URL\n"
 "Transfer all pending revisions from source to destination.\n"
 msgstr ""
+"用法: svnsync synchronize DEST_URL\n"
+"將所有擱置的修訂版自來源傳送至目標.\n"
 
 #: svnsync/main.c:74
 msgid ""
@@ -8268,6 +8285,8 @@ msgid ""
 "Copy all revision properties for revision REV from source to\n"
 "destination.\n"
 msgstr ""
+"用法: svnsync copy-revprops DEST_URL --revision REV\n"
+"將所有修訂版 REV 的修訂版性質自來源複製至目標\n"
 
 #: svnsync/main.c:79
 msgid ""
@@ -8279,7 +8298,7 @@ msgstr ""
 
 #: svnsync/main.c:88
 msgid "The url to synchronize from"
-msgstr ""
+msgstr "同步來源 URL"
 
 #: svnsync/main.c:169
 #, c-format
@@ -8289,21 +8308,21 @@ msgstr "無法取得本機名稱"
 #: svnsync/main.c:192
 #, c-format
 msgid "Failed to get lock on destination repos, currently held by '%s'\n"
-msgstr ""
+msgstr "無法取得目標檔案庫的鎖定, 目前被 '%s' 持有\n"
 
 #: svnsync/main.c:275
 #, c-format
 msgid "Session is rooted at '%s' but the repos root is '%s'"
-msgstr ""
+msgstr "Session 的根目錄為 '%s', 但是檔案庫的根目錄為 '%s'"
 
 #: svnsync/main.c:305
 msgid "Cannot initialize a repository with content in it"
-msgstr ""
+msgstr "無法初始一個有內容的檔案庫"
 
 #: svnsync/main.c:315
 #, c-format
 msgid "Destination repository is already synchronizing from '%s'"
-msgstr ""
+msgstr "目標檔案庫已經自 '%s' 同步了"
 
 #: svnsync/main.c:426
 #, c-format
