--- a/tools/README
+++ b/tools/README
@@ -1,6 +1,4 @@
-This directory contains tools that work with Subversion, but that
-Subversion does not depend on for normal operations.  These tools are
-maintained collectively by the Subversion project, and are under the
-same open source copyright as Subversion itself.
 
-See also ../contrib/.
+An overview of the scripts can be found at:
+http://subversion.tigris.org/tools_contrib.html.
+
