--- a/subversion/po/zh_TW.po
+++ b/subversion/po/zh_TW.po
@@ -114,9 +114,9 @@ msgid "Invalid URL '%s'"
 msgstr "無效 URL '%s'"
 
 #: clients/cmdline/info-cmd.c:111
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' has invalid revision"
-msgstr "項目 '%s' 有無效的節點種類"
+msgstr "項目 '%s' 有無效的修訂版"
 
 #: clients/cmdline/info-cmd.c:263 svnadmin/main.c:1035
 #, c-format
@@ -514,14 +514,13 @@ msgid "disable automatic properties"
 msgstr "關閉自動性質"
 
 #: clients/cmdline/main.c:143
-#, fuzzy
 msgid ""
 "use a different EOL marker than the standard\n"
 "                             system marker for files with the svn:eol-style\n"
 "                             property set to 'native'.\n"
 "                             ARG may be one of 'LF', 'CR', 'CRLF'"
 msgstr ""
-"對於設定原生 svn:eol-style 性質的檔案,\n"
+"對於設定 svn:eol-style 性質為 'native' 的檔案,\n"
 "                             使用異於系統標準列尾符號的換列符號. ARG 可為\n"
 "                             'LF', 'CR', 'CRLF' 之一."
 
@@ -715,7 +714,6 @@ msgstr ""
 "  僅僅使用 'svn diff' 時, 會顯示工作複本中的本地修改.\n"
 
 #: clients/cmdline/main.c:318
-#, fuzzy
 msgid ""
 "Create an unversioned copy of a tree.\n"
 "usage: 1. export [-r REV] URL[@PEGREV] [PATH]\n"
@@ -750,8 +748,6 @@ msgstr ""
 "     如果沒有指定 REV 的話, 所有的本地修改都還會保持著, 但是未納入\n"
 "     版本控制的檔案不會被複製.\n"
 "\n"
-"  If specified, PEGREV determines in which revision the target is first\n"
-"  looked up.\n"
 "  如果指定 PEGREV 的話, 它會用來決定目標的哪一個版本會最先被檢閱.\n"
 
 #: clients/cmdline/main.c:347
@@ -796,7 +792,6 @@ msgstr ""
 "  TARGET 可為工作複本路徑或是 URL.\n"
 
 #: clients/cmdline/main.c:378
-#, fuzzy
 msgid ""
 "List directory entries in the repository.\n"
 "usage: list [TARGET[@REV]...]\n"
@@ -830,6 +825,7 @@ msgstr ""
 "\n"
 "    前次送交的修訂版號碼\n"
 "    前次送交的作者\n"
+"    如果被鎖定的話, 顯示字母 'O'.  (請利用 'svn info URL' 以取得更多的細節)\n"
 "    大小 (以位元組為單位)\n"
 "    前次送交的日期與時間\n"
 
@@ -991,7 +987,6 @@ msgstr ""
 "    URL -> URL:  完全是伺服器端的更名.\n"
 
 #: clients/cmdline/main.c:506
-#, fuzzy
 msgid ""
 "Remove a property from files, dirs, or revisions.\n"
 "usage: 1. propdel PROPNAME [PATH...]\n"
@@ -1003,13 +998,13 @@ msgid ""
 msgstr ""
 "移除目錄, 檔案, 或修訂版的性質.\n"
 "用法: 1. propdel PROPNAME [PATH...]\n"
-"      2. propdel PROPNAME --revprop -r REV [URL]\n"
+"      2. propdel PROPNAME --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 移除納入版本控制的工作複本性質.\n"
 "  2. 移除無版本控制的遠端檔案庫修訂版性質.\n"
+"     TARGET 只是用來決定存在哪個檔案庫\n"
 
 #: clients/cmdline/main.c:517
-#, fuzzy
 msgid ""
 "Edit a property with an external editor.\n"
 "usage: 1. propedit PROPNAME PATH...\n"
@@ -1021,13 +1016,13 @@ msgid ""
 msgstr ""
 "以外部編輯器編輯目標的性質 PROPNAME.\n"
 "用法: 1. propedit PROPNAME PATH...\n"
-"      2. propedit PROPNAME --revprop -r REV [URL]\n"
+"      2. propedit PROPNAME --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 編輯納入版本控制的工作複本性質.\n"
 "  2. 編輯無版本控制的遠端檔案庫修訂版性質更動.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 
 #: clients/cmdline/main.c:529
-#, fuzzy
 msgid ""
 "Print the value of a property on files, dirs, or revisions.\n"
 "usage: 1. propget PROPNAME [TARGET[@REV]...]\n"
@@ -1047,11 +1042,12 @@ msgid ""
 msgstr ""
 "顯示目錄, 檔案, 或修訂版的性質內容.\n"
 "用法: 1. propget PROPNAME [TARGET[@REV]...]\n"
-"      2. propget PROPNAME --revprop -r REV [URL]\n"
+"      2. propget PROPNAME --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 顯示納入版本控制的性質. 如果指定 REV 的話, 它會用來決定目標的\n"
 "     哪一個版本會最先被檢閱.\n"
 "  2. 顯示無版本控制的遠端檔案庫修訂版性質.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 "\n"
 "  本子命令的預設行為會在性質內容加上額外的換列字元, 如此可得到較\n"
 "  美觀的輸出. 另外, 當同時處理多個路徑時, 每一個性質內容會加上它\n"
@@ -1059,7 +1055,6 @@ msgstr ""
 "  將二進制性質內容重導至一個檔案時就很有用).\n"
 
 #: clients/cmdline/main.c:548
-#, fuzzy
 msgid ""
 "List all properties on files, dirs, or revisions.\n"
 "usage: 1. proplist [TARGET[@REV]...]\n"
@@ -1072,14 +1067,14 @@ msgid ""
 msgstr ""
 "列出所有目錄, 檔案, 或修訂版的性質.\n"
 "用法: 1. proplist [TARGET[@REV]...]\n"
-"      2. proplist --revprop -r REV [URL]\n"
+"      2. proplist --revprop -r REV [TARGET]\n"
 "\n"
 "  1. 列出納入版本管理的性質. 如果指定 REV 的話, 它會用來決定目標的\n"
 "     哪一個版本會最先被檢閱.\n"
 "  2. 列出無版本控制的遠端檔案庫修訂版性質更動.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
 
 #: clients/cmdline/main.c:560
-#, fuzzy
 msgid ""
 "Set the value of a property on files, dirs, or revisions.\n"
 "usage: 1. propset PROPNAME PROPVAL PATH...\n"
@@ -1123,12 +1118,15 @@ msgid ""
 "  attempt will fail, and a recursive attempt will set the property\n"
 "  only on the file children of the directory.\n"
 msgstr ""
-"設定目錄, 檔案, 或修訂版的 PROPNAME 內容為 PROPVAL.\n"
-"用法: 1. propset PROPNAME [PROPVAL | -F VALFILE] PATH...\n"
-"      2. propset PROPNAME --revprop -r REV [PROPVAL | -F VALFILE] [URL]\n"
+"設定目錄, 檔案, 或修訂版的性質的內容.\n"
+"用法: 1. propset PROPNAME PROPVAL PATH...\n"
+"      2. propset PROPNAME --revprop -r REV PROPVAL [TARGET]\n"
 "\n"
 "  1. 在工作複本中建立一個版本控制的本地性質更動.\n"
 "  2. 對檔案庫修訂版建立一個無版本控制的遠端性質更動.\n"
+"     TARGET 只是用來決定要存取哪一個檔案庫.\n"
+"\n"
+"  性質的內容可以不用 PROPVAL 而改以 --file 選項來提供.\n"
 "\n"
 "  注意: svn 認得以下受版本控制的特殊性質, 不過還是可以儲存任意的性質:\n"
 "    svn:ignore     - 以換列字元隔開的忽略檔案樣式列表.\n"
@@ -1184,7 +1182,6 @@ msgstr ""
 "        被刪除的目錄\n"
 
 #: clients/cmdline/main.c:632
-#, fuzzy
 msgid ""
 "Print the status of working copy files and directories.\n"
 "usage: status [PATH...]\n"
@@ -1321,14 +1318,14 @@ msgstr ""
 "     M           965    wc/bar.c\n"
 "           *     965    wc/foo.c\n"
 "    A  +         965    wc/qax.c\n"
-"    Head revision:   981\n"
+"    Status against revision:   981\n"
 "\n"
 "    svn status --show-updates --verbose wc\n"
 "     M           965       938 kfogel       wc/bar.c\n"
 "           *     965       922 sussman      wc/foo.c\n"
 "    A  +         965       687 joe          wc/qax.c\n"
 "                 965       687 joe          wc/zig.c\n"
-"    Head revision:   981\n"
+"    Status against revision:   981\n"
 
 #: clients/cmdline/main.c:709
 msgid ""
@@ -1828,16 +1825,14 @@ msgid "Unversioned properties on revision %ld:\n"
 msgstr "修訂版 %ld 上的未納入版本控制的性質:\n"
 
 #: clients/cmdline/props.c:51
-#, fuzzy
 msgid ""
 "Must specify the revision as a number, a date or 'HEAD' when operating on a "
 "revision property"
-msgstr "操作於修訂版性質時, 必須明確指定修訂版"
+msgstr "在操作修訂版性質時, 必須以數字, 日期或是 'HEAD' 來指定修訂版"
 
 #: clients/cmdline/props.c:58
-#, fuzzy
 msgid "Wrong number of targets specified"
-msgstr "指定了錯誤數目的路徑"
+msgstr "指定了錯誤數目的目標"
 
 #: clients/cmdline/props.c:67
 msgid "Either a URL or versioned item is required"
@@ -4075,9 +4070,9 @@ msgid "The root directory cannot be deleted"
 msgstr "根目錄無法被刪除"
 
 #: libsvn_fs_base/tree.c:2935 libsvn_fs_fs/tree.c:1964
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot copy between two different filesystems ('%s' and '%s')."
-msgstr "無法比較兩個不同檔案系統中的性質內容"
+msgstr "無法在兩個不同檔案系統 ('%s' 與 '%s') 之間進行複製"
 
 #: libsvn_fs_base/tree.c:2944 libsvn_fs_fs/tree.c:1970
 msgid "Copy from mutable tree not currently supported"
@@ -4095,9 +4090,8 @@ msgstr ""
 "     實際的:  %s\n"
 
 #: libsvn_fs_base/tree.c:3692 libsvn_fs_fs/tree.c:2630
-#, fuzzy
 msgid "Cannot compare file contents between two different filesystems"
-msgstr "無法比較兩個不同檔案系統中的性質內容"
+msgstr "無法比較兩個不同檔案系統中的檔案內容"
 
 #: libsvn_fs_base/tree.c:3701 libsvn_fs_base/tree.c:3706
 #: libsvn_fs_fs/tree.c:2639 libsvn_fs_fs/tree.c:2644
@@ -4929,14 +4923,12 @@ msgstr "伺服器不支援 unlock 命令"
 
 # as-is
 #: libsvn_ra_svn/client.c:1599
-#, fuzzy
 msgid "Lock response not a list"
-msgstr "Lock element not a list"
+msgstr "Lock response not a list"
 
 #: libsvn_ra_svn/client.c:1613
-#, fuzzy
 msgid "Unknown status for lock command"
-msgstr "未知的 svn 通訊協定命令"
+msgstr "鎖定命令的未知狀態"
 
 #: libsvn_ra_svn/client.c:1635
 msgid "Didn't receive end marker for lock responses"
@@ -4944,14 +4936,12 @@ msgstr ""
 
 # as-is
 #: libsvn_ra_svn/client.c:1722
-#, fuzzy
 msgid "Unlock response not a list"
-msgstr "Lock element not a list"
+msgstr "Unlock response not a list"
 
 #: libsvn_ra_svn/client.c:1736
-#, fuzzy
 msgid "Unknown status for unlock command"
-msgstr "命令回應中的未知狀態 '%s'"
+msgstr "解鎖命令的未知狀態"
 
 #: libsvn_ra_svn/client.c:1757
 msgid "Didn't receive end marker for unlock responses"
@@ -5164,14 +5154,14 @@ msgid "Can't create pipe for hook '%s'"
 msgstr "無法為掛勾 '%s' 建立管道"
 
 #: libsvn_repos/hooks.c:78
-#, fuzzy, c-format
+#, c-format
 msgid "Can't make pipe read handle non-inherited for hook '%s'"
-msgstr "無法為掛勾 '%s' 建立管道"
+msgstr "無法為掛勾 '%s' 建立非繼承式的讀取管道代號"
 
 #: libsvn_repos/hooks.c:84
-#, fuzzy, c-format
+#, c-format
 msgid "Can't make pipe write handle non-inherited for hook '%s'"
-msgstr "無法為掛勾 '%s' 建立管道"
+msgstr "無法為掛勾 '%s' 建立非繼承式的寫入管道代號"
 
 #: libsvn_repos/hooks.c:93
 #, c-format
@@ -5421,9 +5411,8 @@ msgid "Creating passwd file"
 msgstr "建立 passwd 檔案"
 
 #: libsvn_repos/repos.c:1527
-#, fuzzy
 msgid "Creating authz file"
-msgstr "建立 passwd 檔案"
+msgstr "建立 authz 檔案"
 
 #: libsvn_repos/repos.c:1560
 msgid "Could not create top-level directory"
@@ -5627,14 +5616,14 @@ msgid "Can't get default file perms for file at '%s' (file stat error)"
 msgstr "無法取得 '%s' 的預設檔案權限 (檔案 stat 錯誤)"
 
 #: libsvn_subr/io.c:1036
-#, fuzzy, c-format
+#, c-format
 msgid "Can't open file at '%s'"
-msgstr "無法開啟檔案 '%s'"
+msgstr "無法於 '%s' 開啟檔案"
 
 #: libsvn_subr/io.c:1040
-#, fuzzy, c-format
+#, c-format
 msgid "Can't get file perms for file at '%s' (file stat error)"
-msgstr "無法取得 '%s' 的預設檔案權限 (檔案 stat 錯誤)"
+msgstr "無法於 '%s' 取得檔案的權限 (檔案 stat 錯誤)"
 
 #: libsvn_subr/io.c:1073 libsvn_subr/io.c:1133
 #, c-format
