--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 1.4.0
+(?? July 2006, from /branches/1.4.x)
+http://svn.collab.net/repos/svn/tags/1.4.0
+
+
 Version 1.3.1
 (25 March 2006, from /branches/1.3.x)
 http://svn.collab.net/repos/svn/tags/1.3.1
